--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.burgueranteux</groupId>
-    <artifactId>BurguerAnteux</artifactId>
+    <groupId>com.burgeranteux</groupId>
+    <artifactId>BurgerAnteux</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>anteux</name>
     <description>anteux</description>
