--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://anteux.cwejfb7iqfvz.us-east-1.rds.amazonaws.com:3306/anteux?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=marcos
+spring.datasource.password=marcos
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
