--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://anteux.cwejfb7iqfvz.us-east-1.rds.amazonaws.com:3306/anteux?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
-spring.datasource.username=marcos
-spring.datasource.password=marcos
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+spring.datasource.username=${RDS_USERNAME}
+spring.datasource.password=${RDS_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=${SERVER_PORT}
